# pyHaasAPI

./: .coverage  .cursorrules  .env.bak  .env.example  .gitignore  AI_ASSISTANT_CONFIGURATION_GUIDE.md  AI_ASSISTANT_QUICK_REFERENCE.md  AI_INTERFACE_DESIGN_BRIEF.md  API_STATUS.md  BACKTEST_API_INTEGRATION_FINDINGS.md  CLEANUP_COMPLETE_SUMMARY.md  CLI_ANALYSIS_REPORT.md  CLI_FUNCTIONALITY_COMPARISON.md  COMPLETE_V1_INVENTORY.md  COMPREHENSIVE_LAB_SUMMARY_20250913_120103.md  COMPREHENSIVE_LAB_SUMMARY_20250913_163032.md  COMPREHENSIVE_LAB_SUMMARY_20250913_164357.md  COMPREHENSIVE_LAB_SUMMARY_20250917_151005.md  COMPREHENSIVE_REFACTORING_TASKS.md  COMPREHENSIVE_REFACTORING_TODO.md  CONTEXT_PROMPT.md  ENDPOINT_ANALYSIS.md  FINAL_HISTORY_INTELLIGENCE_INTEGRATION_SUMMARY.md  FINANCIAL_ANALYTICS_PROGRESS.md  FUNCTION_MAPPING_ANALYSIS.md  INIT_DATA_ANALYSIS.md  INIT_DATA_SUMMARY.md  INTERNAL_REPOSITORY_MANAGEMENT.md  KIRO_PYTHON_REMINDER.md  LAB_ANALYSIS_SUMMARY.md  LAB_TO_BOT_AUTOMATION_PLAN.md  MANIFEST.in  MARKET_DATA_TESTING.md  MCP_SERVER_COMPREHENSIVE_GUIDE.md  MIGUEL_WORKFLOW_REFACTORED_SUMMARY.md  MONOREPO_SETUP_SUMMARY.md  PROJECT_SERVER_REVISION.md  PUBLISHING.md  PYHAASAPI_INTEGRATION_SUMMARY.md  QUICK_RELEASE.md  (+203 more)
Other projects/mcp_tui_client/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  __init__.py  __main__.py  app.py  cli.py  pyproject.toml  run.py  styles.css
Other projects/mcp_tui_client/docs/: __init__.py
Other projects/mcp_tui_client/examples/: __init__.py  chart_rendering_demo.py  data_cache_example.py  enhanced_components_demo.py  optimization_demo.py  simple_components_demo.py  visualization_demo.py  websocket_example.py
Other projects/mcp_tui_client/nodes/: __init__.py
mcp_server/: ENDPOINT_INVENTORY.md  LICENSE_DUAL.md  README.md  REORGANIZATION_SUMMARY.md  TESTING_SUCCESS_REPORT.md  __init__.py  auth_manager.py  http_bridge.py  ingest_data.py  mcp_lab_execution_endpoints.py  pyproject.toml  server.py  simple_api_bridge.py  synchronize_kb.py  test_connection.py  test_enhanced_features.py  test_mcp.py  working_api_bridge.py
mcp_server/tests/: test_mcp_api.py
mcp_server/tools/: comprehensive_analysis_tools.py
mcp_server/workflows/: server_setup.py
pyHaasAPI/: REFACTORING_PROGRESS_SUMMARY.md  __init__.py  __init__.py.backup  api.py  api_validation.py  backtest_manager.py  backtest_object.py  bot_editing_api.py  domain.py  enhanced_execution.py  error_prevention.py  exceptions.py  history_intelligence.py  lab.py  lab_backup.py  lab_manager.py  logger.py  model.py  optimization.py  parameter_handler.py  parameters.py  price.py  pyproject.toml  run_tests.py  tools.py  types.py
pyHaasAPI/accounts/: __init__.py
pyHaasAPI/analysis/: __init__.py  analyzer.py  backtest_manager.py  cache.py  extraction.py  live_bot_validator.py  logs.py  metrics.py  models.py  robustness.py  scoring.py  wfo.py
pyHaasAPI/api/: __init__.py  labs.py  scripts.py
pyHaasAPI/api/bot/: bot_api.py
pyHaasAPI/cli/: CLEANUP_COMPLETE.md  __init__.py  account_cleanup.py  account_cleanup_refactored.py  analysis_cli.py  analyze_backtests.py  analyze_from_cache.py  analyze_from_cache_refactored.py  backtest_cli.py  backtest_manager.py  backtest_workflow_cli.py  base.py  bot_cli.py  bot_management_cli.py  bot_performance_reporter.py  cache_analysis.py  cache_analysis_filtered.py  cache_labs.py  cached_robustness_analyzer.py  cleanup_duplicate_labs.py  common.py  comprehensive_backtesting_cli.py  comprehensive_backtesting_manager.py  consolidated_cli.py  delete_labs_by_pattern.py  download_cli.py  fix_bot_trade_amounts.py  fix_bot_trade_amounts_refactored.py  fixed_longest_backtest.py  interactive_analyzer.py  lab_cli.py  lab_monitor.py  longest_backtest.py  longest_backtest_v1.py  main.py  mass_bot_creator.py  mass_bot_creator_refactored.py  multi_lab_backtesting_system.py  order_cli.py  price_tracker.py  (+14 more)
pyHaasAPI/cli_ref/: account_cli.py  backtest_workflow_cli.py  base.py  bot_manager.py  cache_analysis_cli.py  order_cli.py  project_manager_cli.py  report_manager.py
pyHaasAPI/config/: __init__.py  api_config.py  bot_config.py  lab_configuration.py  logging_config.py  settings.py
pyHaasAPI/core/: __init__.py  async_client.py  async_utils.py  auth.py  backtesting_manager.py  bot_verification_manager.py  client.py  config.py  data_manager.py  endpoints.py  field_utils.py  finetuning_manager.py  logging.py  server_manager.py  simple_trading_orchestrator.py  type_config.py  type_definitions.py
pyHaasAPI/data_dumping/: __init__.py
pyHaasAPI/docs/: ENDPOINT_ARCHITECTURE.md
pyHaasAPI/examples/: complete_bot_management_example.py  comprehensive_example.py  example_usage.py  wfo_example.py
pyHaasAPI/exceptions/: __init__.py  analysis.py  api.py  auth.py  backtest.py  base.py  bot.py  finetune.py  lab.py  network.py  orchestration.py  order.py  validation.py
pyHaasAPI/labs/: __init__.py
pyHaasAPI/markets/: __init__.py
pyHaasAPI/mcp/: CLEANUP_SUMMARY.md  MCP_AI_USAGE_GUIDE.md  MCP_SERVER_OVERVIEW.md  README.md  __init__.py  cursor_mcp_handlers.py  cursor_mcp_server.py  quick_start_guide.md  simple_test.py  standalone_mcp_server.py  test_cursor_mcp.py  working_mcp_server.py
pyHaasAPI/miro_integration/: __init__.py  bot_deployment.py  cli.py  dashboard_manager.py  example_usage.py  lab_monitor.py
pyHaasAPI/models/: __init__.py  account.py  backtest.py  bot.py  chart.py  cloud.py  common.py  enumerations.py  lab.py  order.py  scripts.py
pyHaasAPI/services/: __init__.py  account_manager.py  analysis_manager.py  bot_deployment_service.py  bot_manager.py  bot_naming_service.py  google_sheets_service.py  lab_clone_manager.py  lab_config_manager.py  longest_backtest_service.py  server_content_manager.py  sync_history_manager.py
pyHaasAPI/testing/: __init__.py  test_data_manager.py
pyHaasAPI/tests/: __init__.py  conftest.py  conftest_mock.py  conftest_problematic.py  run_tests.py  test_api.py  test_guardrails.py  test_services.py  test_simple_trading_orchestrator.py  test_tools.py
pyHaasAPI/tools/: __init__.py  data_dumper.py
(+1418 files in other folders)
