[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "haas-mcp-server"
version = "1.0.0"
description = "MCP Server for HaasOnline API Integration"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Cosmos", email = "cosmos@example.com"}
]
maintainers = [
    {name = "Cosmos", email = "cosmos@example.com"}
]
keywords = ["mcp", "haasonline", "trading", "api", "server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Cosmos/haas-mcp-server"
Repository = "https://github.com/Cosmos/haas-mcp-server"
Documentation = "https://github.com/Cosmos/haas-mcp-server#readme"
Issues = "https://github.com/Cosmos/haas-mcp-server/issues"

[project.scripts]
haas-mcp-server = "server:main"

[tool.setuptools.packages.find]
include = ["*"]
exclude = ["tests*", "logs*", "results*", "Data*"]