[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyHaasAPI"
version = "0.1.0"
description = "Python library for HaasOnline API - Free for individual traders and research institutions. Commercial licensing available for hedge funds and financial institutions."
authors = ["Cosmos <cosmos@example.com>"]
license = "MIT"
readme = "../README.md"
homepage = "https://github.com/Cosmos/pyHaasAPI"
repository = "https://github.com/Cosmos/pyHaasAPI"
keywords = ["haasonline", "trading", "api", "cryptocurrency", "automation", "backtesting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "pyHaasAPI"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0.0"
requests = "^2.31.0"
loguru = "^0.7.0"
typing-extensions = "^4.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.14.0"

[tool.poetry.urls]
Homepage = "https://github.com/Cosmos/pyHaasAPI"
Repository = "https://github.com/Cosmos/pyHaasAPI"
Documentation = "https://github.com/Cosmos/pyHaasAPI#readme"
Issues = "https://github.com/Cosmos/pyHaasAPI/issues"